tests/lit/all/assembler/mod/bad_fn_or_var_or_struct.yail
// RUN: @yair_as @file --color never

mod "😀" {
  // CHECK: error: Unknown declaration within module
  // CHECK: ^ expected fn, var, struct, or '}' to close the module
  bad
}
